--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
+secrets.h
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
-*.odt
-secrets.h
 .~lock.*
-logs/positions.csv
+*.csv
 *.odp
+*.odt
