--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ secrets.h
 *.csv
 *.odp
 *.odt
+
+# Not ignore files from the forked DW1000 library
+!.pio/libdeps/esp32dev/DW1000/src/
+!.pio/libdeps/esp32dev/DW1000/src/**
