--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,4 @@ monitor_speed = 115200
 lib_deps =
     adafruit/Adafruit GFX Library @ ^1.11.7
     adafruit/Adafruit SSD1306 @ ^2.5.7
-    https://github.com/thotro/arduino-dw1000.git
+    git@github.com:DrPickle3/arduino-dw1000.git
