--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,11 @@
         "typeinfo": "cpp"
     },
     "python-envs.defaultEnvManager": "ms-python.python:system",
-    "python-envs.pythonProjects": []
+    "python-envs.pythonProjects": [
+        {
+            "path": "",
+            "envManager": "ms-python.python:system",
+            "packageManager": "ms-python.python:pip"
+        }
+    ]
 }
